@@ -1,5 +1,12 @@
 2007-02-23  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php:
+	Add ABC notation support.
+	* class.abc.inc.php:
+	New file.
+
+2007-02-23  Abel Cheung  <abelcheung@gmail.com>
+
 	* class.scorerender.inc.php:
 	More precaution -- also make it fail if command returns
 	succeed but didn't render any image.
